app/assets/stylesheets/main.css
body {
    font-family: 'Roboto', sans-serif;
    font-weight: 300;
}

nav {
    padding: 20px 0;

}
.navbar-brand{
    font-size: 36px;
    font-weight: bolder;
}

li {
    display: block;
}

#feedback { font-size: 1.4em; }
.selectable .ui-selecting, .unselectable .ui-selecting { background: #FECA40; }

#analyse{
    position: relative;
    left: 80%;
    top:10px;
    margin-right:30px;
}

.editable{
    height: 300px;
    overflow:scroll
}

.highlight{
    background-color: orange;
    opacity: 0.5;
}

.showWordDetails {
    cursor: pointer;
    color: black;
    font-weight: bold;
}

#code-mask{
    border: solid 1px #CCCCCC;

    border-radius: 5px;
    height: 100px;
}

#code-mask:hover{
    border:solid 1px Aqua ;
    font-weight: bold;
}
#codeMaskWrapper {
    margin-top: 30px;
}

.btn.btn-primary {
    border-radius: 2px;
    border: 0;  text-shadow: none;

}

.btn.btn-primary:hover {

}

.btn-secondary {
    background-color: #E8DFE0;
    color: #ffffff;
    margin: 0 0 30px;
}

footer {
    font-size: 12px;
    padding: 20px 0;
}

footer .col-sm-8 {
    display: flex;
    justify-content: flex-end;
}

footer ul {
    list-style: none;
}

footer li img {
    width: 32px;
    height: 32px;
}


.zbutton{
 color: white;
 background-color:#508ABF;
 border-radius: 60px;
 border-color:#508ABF;
 padding:5px 4px 5px 4px ;
 font-size: 0.8em;
 position: absolute;
 bottom:5px;
 right:10px;
}


.doneButton {
    display: none;
}

.editButton {
    display: none;
}

#addCodeButton {
    display: none;
}

li div:active {
    background-color: orange;
}

.list-group-item {
    background-color: #EEE;
    margin: 2px;
    padding: 0;
    box-shadow: 10px 10px 5px #CCC;
    min-height: 42px;
    cursor: pointer;
}


.editing {
    background-color: #FFF;
    border: 1px solid #DDD;
}

.text_field {
    padding: 10px 15px;
    height: 100%;
    min-height: 40px;
    width: 90%;
}

#code-list {
    position: fixed;
}

.mainNewCode {
    display: none;
}

.modal-header {
    background-color: darkgray;
    height: 40px;
    padding: 0;
}

#info {
    height: inherit;
}

.modal-body {
    padding:0;
    margin: 0;
}

#infoWordWrapper{
    height: 40px;
    background-color: #EEE;
    padding: 0;
}

#infoWordDiv {
    height: inherit;
    padding-left: 0;
}

#infoWord {
    color: darkblue;
}

#infoSynonymsWrapper {
    background-color: #FFF;
    height: inherit;
}

#infoRelatedCodesListWrapper {
    background-color: #EEE;
    height: inherit;
}

#synonymsList li {
    display: inline;
    padding: 5px;
    color: darkblue;
}

